# klsxx.essential

./: CMakeLists.txt  LICENSE  README.md
Module/: Block.cpp  Perf.cpp
Module/pmr/: Resource.cpp
Module/temp/: Temp.cpp
Published/kls/: Format.h  Handle.h  Macros.h  Object.h  STL.h  Span.h
Published/kls/essential/: Final.h  Memory.h  MemoryAVL.h  STL.h  Unsafe.h
Published/kls/hal/: Perf.h  System.h
Published/kls/pmr/: Allocator.h  Automatic.h  Resource.h
Published/kls/temp/: Queue.h  STL.h  Temp.h
